# ProjectGabriel-Remastered

./: .gitignore  LICENSE  NOTICE.md  README.md  body.json  body2.json  body3.json  body4.json  body7.json  body9.json  config.yml.example  configurator.bat  configurator.py  control_server.py  main.py  migrate.bat  music_server.py  pyproject.toml  requirements.txt  run.bat  setup.bat  supervisor.py  vision_server.py  vrchat_api_tools.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help.yml
.github/workflows/: release-on-stable-version-tag.yml
config/: tools.yml.example  voices.yml.example
config/prompts/: appends.yml  appends.yml.example  personalities.yml  personalities.yml.example  prompts.yml  prompts.yml.example
depth_server/: pyproject.toml  requirements.txt  server.py
discord_bot/: __init__.py  bot.py  config.py  config.yml.example  conversation_store.py  gemini_session.py  message_rag.py
discord_bot/data/: .gitkeep
discord_bot/prompts/: appends.yml.example  personalities.yml.example  prompts.yml.example
discord_bot/tools/: __init__.py  discord_actions.py  gifs.py  handler.py  memory.py  message_rag.py  personalities.py  relay.py  system.py  voice_control.py  vrchat_status.py
models/yolo26/: config.json
models/yolov8/: config.json
onboarding/: app.js  index.html  style.css
plugins/: README.md
plugins/diary/: README.md  __init__.py  diary.py  plugin.yml  scheduler.py  summarizer.py  tools.py
plugins/example_hello/: __init__.py  plugin.yml
plugins/mood/: README.md  __init__.py  emotions.json.example  mood.py  moods.json.example  plugin.yml  tools.py
scripts/: fix_lyrics.py  import_old_memories.py  migrate_memories.py  suno_latency_probe.py  test_instance_monitor.py  test_pose_decoder_live.py  test_raycast_osc.py  test_voice_control.py  test_voxel_mapping_live.py  test_voxel_nav_live.py  test_wanderer_raycast.py
social_server/: .gitignore  README.md  config.yml.example  install.bat  package-lock.json  package.json  run.bat  server.js  test_body.json
social_server/src/: auth.js  config.js  database.js  logger.js  websocket.js
src/: audio.py  avatars.py  cli.py  config.py  emotions.py  face_tracker.py  gemini_live.py  idle_chatbox.py  instance_monitor.py  mapping_service.py  memory.py  music_gen.py  myinstants.py  pathfinder.py  personalities.py  pose_decoder.py  raycast.py  social.py  spatial_map.py  suno.py  tools.py  tools_sync.py  tracker.py  tts.py  voxel_explorer.py  voxel_nav.py  vrchat.py  vrchatapi.py  wanderer.py  waypoints.py
src/gemini_live/: __init__.py  audio.py  chatbox.py  chatbox_orchestrator.py  config_builder.py  conversation_logger.py  receive.py  session.py  vision.py
src/plugins/: __init__.py  api.py  loader.py
src/tools/: __init__.py  _base.py  _handler.py  avatar_scaling.py  discord.py  emotions_tools.py  mapping.py  memory_tools.py  movement.py  music.py  music_gen.py  personalities.py  social.py  soundboard.py  suno.py  system.py  time.py  tracker.py  voice.py  voice_control.py  vrchat_api.py  wanderer.py  web_search.py
tests/: test_chatbox_orchestrator.py  test_discord_plugin_api.py  test_memory.py  test_pathfinder_and_waypoints.py  test_raycast_and_mapping.py  test_voxel_nav.py
tts_server_code_example/: full_client.py
unity_assets/: AVATAR_SETUP.md  README.md
unity_assets/Editor/: GabrielAvatarSetupWindow.cs  GabrielPoseHudBuilder.cs  GabrielSensorRigBuilder.cs  README.md
unity_assets/shaders/: PoseExfil.shader  PoseExfilScreen.shader
vencord_plugin/gabrielVoiceControl/: README.md  index.ts  native.ts  types.ts
webui/: app.js  index.html  overlay.html  overlay_config.html  overlay_music.html  style.css
webui-src/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webui-src/src/: App.tsx  index.css
webui/assets/: main-2Sjqle0x.js  (+50 more)
(+18 files in other folders)
