[project]
name = "projectgabriel"
version = "2.0.0"
description = "Real-time VRChat AI powered by Gemini Live with voice interaction, OSC control, and YOLOv8n person tracking"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "HoppouAI"}
]
keywords = ["vrchat", "gemini", "ai", "voice", "osc", "yolo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-genai>=1.0.0",
    "pyaudio>=0.2.14",
    "python-osc>=1.8.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pedalboard>=0.9.0",
    "ultralytics>=8.0.0",
    "lap>=0.5.12",
    "bettercam>=1.0.0",
    "mss>=9.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "mutagen>=1.47.0",
    "pymongo>=4.6.0",
    "pynput>=1.7.0",
    "pyotp>=2.9.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
    "stream2sentence>=0.3.0",
    "httpx>=0.27.0",
    "google-cloud-texttospeech>=2.16.0",
    "transformers>=4.40.0",
    "psutil>=6.0.0",
    "colorama>=0.4.6",
    "discord.py-self>=2.0.0",
    "nltk>=3.8.0",
    "chromadb>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/HoppouAI/ProjectGabriel-Remaster"
Issues = "https://github.com/HoppouAI/ProjectGabriel-Remaster/issues"

[project.scripts]
gabriel = "main:main"
gabriel-control = "control_server:run_control_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
