[project]
name = "depth-server"
version = "0.1.0"
description = "Depth estimation server for ProjectGabriel wanderer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "torch",
    "transformers>=4.40",
    "pillow",
    "numpy",
    "opencv-python-headless",
]

# PyTorch must come from the official index, not PyPI.
# Change cu128 to match your CUDA version (cu121, cu124, cu126, cu128).

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
